[metadata]
name = pygame_utility
version = 1.0.0
author = FluffyRudy
description = "Package containing simple utility functions for pygame"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FluffyRudy/pygame_util
project_urls =
    Bug Tracker = https://github.com/FluffyRudy/pygame_util/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pygame-ce>=2.0.0

[options.packages.find]
include =
    pygame_utility
    map_loader
    utils
